[tool.black]
line-length = 89
skip-string-normalization = true

[tool.isort]
balanced_wrapping = true
combine_as_imports = true
line_length = 89
multi_line_output = 6
use_parentheses = true

[project]
dependencies = ["guesslang @ git+https://github.com/andydecleyre/guesslang@tensorflow-looser", "peewee", "plumbum", "pyTelegramBotAPI", "strictyaml", "structlog", "wrapt"]

[project.optional-dependencies]
dev = ["rich"]
all = ["black", "guesslang @ git+https://github.com/andydecleyre/guesslang@tensorflow-looser", "isort", "peewee", "plumbum", "pyTelegramBotAPI", "rich", "strictyaml", "structlog", "wheezy.template", "wrapt", "yamlpath"]
ops = ["black", "isort", "wheezy.template", "yamlpath"]
